--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,1 @@
-// Custom.scss
-// Option A: Include all of Bootstrap
-
-// Include any default variable overrides here (though functions won't be available)
-
-@import "../node_modules/bootstrap/scss/bootstrap";
-
-// Then add additional custom code here
+/* You can add global styles to this file, and also import other style files */
